// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationHeaderTabs ApplicationHeaderTabs renders correctly. 1`] = `
<div
  id="applicationheadertabs"
>
  <div
    className="whiteSpacer"
  >
    <nav
      className="bx--tabs some-class"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="navigation"
      selected={2}
      tabcontentclassname="tab-content"
    >
      <div
        aria-label="listbox"
        className="bx--tabs-trigger"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <a
          className="bx--tabs-trigger-text"
          href="#"
          onClick={[Function]}
          tabIndex={-1}
        />
        <svg
          alt="show menu options"
          aria-label="show menu options"
          fillRule="evenodd"
          height="5"
          role="img"
          viewBox="0 0 10 5"
          width="10"
        >
          <title>
            show menu options
          </title>
          <path
            d="M0 0l5 4.998L10 0z"
          />
        </svg>
      </div>
      <ul
        className="bx--tabs__nav bx--tabs__nav--hidden"
        role="tablist"
      >
        <li
          className="bx--tabs__nav-item"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="presentation"
          selected={false}
          tabIndex={-1}
        >
          <a
            aria-selected={false}
            className="bx--tabs__nav-link"
            href="#"
            role="tab"
            tabIndex={0}
          >
            Overview
          </a>
        </li>
        <li
          className="bx--tabs__nav-item"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="presentation"
          selected={false}
          tabIndex={-1}
        >
          <a
            aria-selected={false}
            className="bx--tabs__nav-link"
            href="#"
            role="tab"
            tabIndex={0}
          >
            Resources
          </a>
        </li>
        <div
          className="refresh-time-selection"
        >
          <div
            aria-label="Refresh"
            className="button"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
            title="Refresh"
          >
            <svg
              className="button-icon"
            >
              <use
                href="#diagramIcons_autoRefresh"
              />
            </svg>
          </div>
          <div
            aria-label="Choose refresh"
            className="bx--dropdown selection bx--list-box"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="listbox"
            tabIndex="0"
          >
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open menu"
              className="bx--list-box__field"
              data-toggle={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex="0"
              type="button"
            >
              <span
                className="bx--list-box__label"
                htmlFor="downshift-1-input"
              >
                Refresh every {0}s
              </span>
              <div
                className="bx--list-box__menu-icon"
              >
                <svg
                  alt="Open menu"
                  aria-label="Open menu"
                  fillRule="evenodd"
                  height="5"
                  role="img"
                  viewBox="0 0 10 5"
                  width="10"
                >
                  <title>
                    Open menu
                  </title>
                  <path
                    d="M0 0l5 4.998L10 0z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </ul>
    </nav>
    <div
      aria-hidden={true}
      className="tab-content"
      hidden={true}
      selected={false}
    />
    <div
      aria-hidden={true}
      className="tab-content"
      hidden={true}
      selected={false}
    />
    <div
      aria-hidden={false}
      className="tab-content"
      hidden={false}
      selected={true}
    />
  </div>
</div>
`;

exports[`ApplicationHeaderTabs ApplicationHeaderTabs renders correctly. 2`] = `
<div
  id="applicationheadertabs"
>
  <div
    className="whiteSpacer"
  >
    <nav
      className="bx--tabs some-class"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="navigation"
      selected={1}
      tabcontentclassname="tab-content"
    >
      <div
        aria-label="listbox"
        className="bx--tabs-trigger"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <a
          className="bx--tabs-trigger-text"
          href="#"
          onClick={[Function]}
          tabIndex={-1}
        >
          Resources
        </a>
        <svg
          alt="show menu options"
          aria-label="show menu options"
          fillRule="evenodd"
          height="5"
          role="img"
          viewBox="0 0 10 5"
          width="10"
        >
          <title>
            show menu options
          </title>
          <path
            d="M0 0l5 4.998L10 0z"
          />
        </svg>
      </div>
      <ul
        className="bx--tabs__nav bx--tabs__nav--hidden"
        role="tablist"
      >
        <li
          className="bx--tabs__nav-item"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="presentation"
          selected={false}
          tabIndex={-1}
        >
          <a
            aria-selected={false}
            className="bx--tabs__nav-link"
            href="#"
            role="tab"
            tabIndex={0}
          >
            Overview
          </a>
        </li>
        <li
          className="bx--tabs__nav-item bx--tabs__nav-item--selected"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="presentation"
          selected={true}
          tabIndex={-1}
        >
          <a
            aria-selected={true}
            className="bx--tabs__nav-link"
            href="#"
            role="tab"
            tabIndex={0}
          >
            Resources
          </a>
        </li>
        <li
          className="bx--tabs__nav-item"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="presentation"
          selected={false}
          tabIndex={-1}
        >
          <a
            aria-selected={false}
            className="bx--tabs__nav-link"
            href="#"
            role="tab"
            tabIndex={0}
          >
            Incidents
          </a>
        </li>
        <div
          className="refresh-time-selection"
        >
          <div
            aria-label="Refresh"
            className="button"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
            title="Refresh"
          >
            <svg
              className="button-icon"
            >
              <use
                href="#diagramIcons_autoRefresh"
              />
            </svg>
          </div>
          <div
            aria-label="Choose refresh"
            className="bx--dropdown selection bx--list-box"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="listbox"
            tabIndex="0"
          >
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open menu"
              className="bx--list-box__field"
              data-toggle={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex="0"
              type="button"
            >
              <span
                className="bx--list-box__label"
                htmlFor="downshift-2-input"
              >
                Refresh every {0}s
              </span>
              <div
                className="bx--list-box__menu-icon"
              >
                <svg
                  alt="Open menu"
                  aria-label="Open menu"
                  fillRule="evenodd"
                  height="5"
                  role="img"
                  viewBox="0 0 10 5"
                  width="10"
                >
                  <title>
                    Open menu
                  </title>
                  <path
                    d="M0 0l5 4.998L10 0z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </ul>
    </nav>
    <div
      aria-hidden={true}
      className="tab-content"
      hidden={true}
      selected={false}
    />
    <div
      aria-hidden={false}
      className="tab-content"
      hidden={false}
      selected={true}
    >
      <div
        className="page-content-container"
      />
    </div>
    <div
      aria-hidden={true}
      className="tab-content"
      hidden={true}
      selected={false}
    />
    <div
      aria-hidden={true}
      className="tab-content"
      hidden={true}
      selected={false}
    />
  </div>
</div>
`;

exports[`ApplicationHeaderTabs ApplicationHeaderTabs renders correctly. 3`] = `
<div
  id="applicationheadertabs"
>
  <div
    className="whiteSpacer"
  >
    <nav
      className="bx--tabs some-class"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="navigation"
      selected={2}
      tabcontentclassname="tab-content"
    >
      <div
        aria-label="listbox"
        className="bx--tabs-trigger"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <a
          className="bx--tabs-trigger-text"
          href="#"
          onClick={[Function]}
          tabIndex={-1}
        >
          Incidents
        </a>
        <svg
          alt="show menu options"
          aria-label="show menu options"
          fillRule="evenodd"
          height="5"
          role="img"
          viewBox="0 0 10 5"
          width="10"
        >
          <title>
            show menu options
          </title>
          <path
            d="M0 0l5 4.998L10 0z"
          />
        </svg>
      </div>
      <ul
        className="bx--tabs__nav bx--tabs__nav--hidden"
        role="tablist"
      >
        <li
          className="bx--tabs__nav-item"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="presentation"
          selected={false}
          tabIndex={-1}
        >
          <a
            aria-selected={false}
            className="bx--tabs__nav-link"
            href="#"
            role="tab"
            tabIndex={0}
          >
            Overview
          </a>
        </li>
        <li
          className="bx--tabs__nav-item"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="presentation"
          selected={false}
          tabIndex={-1}
        >
          <a
            aria-selected={false}
            className="bx--tabs__nav-link"
            href="#"
            role="tab"
            tabIndex={0}
          >
            Resources
          </a>
        </li>
        <li
          className="bx--tabs__nav-item bx--tabs__nav-item--selected"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="presentation"
          selected={true}
          tabIndex={-1}
        >
          <a
            aria-selected={true}
            className="bx--tabs__nav-link"
            href="#"
            role="tab"
            tabIndex={0}
          >
            Incidents
          </a>
        </li>
        <div
          className="refresh-time-selection"
        >
          <div
            aria-label="Refresh"
            className="button"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
            title="Refresh"
          >
            <svg
              className="button-icon"
            >
              <use
                href="#diagramIcons_autoRefresh"
              />
            </svg>
          </div>
          <div
            aria-label="Choose refresh"
            className="bx--dropdown selection bx--list-box"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="listbox"
            tabIndex="0"
          >
            <div
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open menu"
              className="bx--list-box__field"
              data-toggle={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex="0"
              type="button"
            >
              <span
                className="bx--list-box__label"
                htmlFor="downshift-3-input"
              >
                Refresh every {0}s
              </span>
              <div
                className="bx--list-box__menu-icon"
              >
                <svg
                  alt="Open menu"
                  aria-label="Open menu"
                  fillRule="evenodd"
                  height="5"
                  role="img"
                  viewBox="0 0 10 5"
                  width="10"
                >
                  <title>
                    Open menu
                  </title>
                  <path
                    d="M0 0l5 4.998L10 0z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </ul>
    </nav>
    <div
      aria-hidden={true}
      className="tab-content"
      hidden={true}
      selected={false}
    />
    <div
      aria-hidden={true}
      className="tab-content"
      hidden={true}
      selected={false}
    />
    <div
      aria-hidden={false}
      className="tab-content"
      hidden={false}
      selected={true}
    >
      <div
        className="some-content"
      />
    </div>
    <div
      aria-hidden={true}
      className="tab-content"
      hidden={true}
      selected={false}
    />
  </div>
</div>
`;
